[project]
name = "borealis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "jiwer>=4.0.0",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchcodec>=0.4.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "wandb>=0.21.0",
]
