[project]
name = "borealis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "torchaudio>=2.7.1",
    "unsloth>=2025.7.11",
    "transformers>=4.54.1",
    "datasets>=3.6.0",
    "wandb>=0.21.0",
    "tqdm>=4.67.1",
    "accelerate>=1.9.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
